css/custom.css
/* ... */
.has-error .form-control {
	box-shadow: none;
		-webkit-box-shadow: none;
}

.has-error .form-control {
	border: 1px solid #a94442 !important;
	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
	box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
}

.form-control.login {
	border: 1px solid #dddddd;
	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
	box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
	height: 30px;
}


textarea.form-control {
	resize: vertical;
}
.hide, .show {
	transition: all 0.3s ease;
		-moz-transition: all 0.3s ease;
		-ms-transition: all 0.3s ease;
		-o-transition: all 0.3s ease;
		-webkit-transition: all 0.3s ease;
}
.label {
	border-radius: 10px;
	display: block;
	font-weight: 900;
	padding: 4px 10px 5px;
	text-align: center;
	text-transform: uppercase;
}
.link-green {
	color: #5cb85c;
}
.link-green:hover {
	color: #47a447;
	text-decoration: underline;
}
.link-orange {
	color: #e67e22;
}
.link-orange:hover {
	color: #d35400;
	text-decoration: underline;
}
.tooltip {
	font-size: 10px;
	font-size: 1rem;
	font-weight: 700;
	text-transform: uppercase;
}
.tooltip-inner {
	background-color: rgba(0, 0, 0, 0.8);
	border-radius: 3px;
	padding: 8px 12px;
}
.update-ie {
	background-color: #b73137;
	color: #fff;
	display: none;
	font-size: 12px;
	font-size: 1.2rem;
	padding: 10px;
	position: fixed;
	text-align: center;
	top: 0;
	width: 100%;
}
.lt-ie9 .update-ie {
	display: block;
}
.lt-ie9 body {
	padding-top: 140px;
}
.lt-ie9 .navbar-fixed-top {
	top: 40px;
}

/* Buttons */
.btn {
	border: none;
	border-radius: 5px;
	color: #fff       !important;
	font-size: 12px   !important;
	font-size: 1.2rem !important;
	font-weight: 700;
	padding: 8px 10px !important;
	text-transform: uppercase;
	transition: all 0.3s ease;
		-moz-transition: all 0.3s ease;
        -ms-transition: all 0.3s ease;
        -o-transition: all 0.3s ease;
		-webkit-transition: all 0.3s ease;
}
.btn:hover {
	color: #fff;
	transition: all 0.3s ease;
		-moz-transition: all 0.3s ease;
        -ms-transition: all 0.3s ease;
        -o-transition: all 0.3s ease;
		-webkit-transition: all 0.3s ease;
}
.btn:active, .btn.active, .btn:focus {
	box-shadow: none;
		-webkit-box-shadow: none;
	color: #fff;
	outline: none;
}
.btn-green {
	background-color: #5cb85c;
}
.btn-green:hover {
	background-color: #47a447;
}
.btn-grey {
	background-color: #bdc3c7;
}
.btn-grey:hover {
	background-color: #7f8c8d;
}
.btn-lg {
	font-size: 16px;
	font-size: 1.6rem;
	padding: 10px 0;
}
.btn-orange {
	background-color: #e98b39 !important;
}
.btn-orange:hover {
	background-color: #d35400;
}

/* Header */
.navbar {
	background-color: #34495e;
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.17);
		-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.17);
}
.navbar-fixed-top {
	border-width: 0;
	z-index: 1050;
}
.navbar .navbar-brand {
	color: #fff;
	font-size: 18px;
	font-size: 1.8rem;
	font-weight: 300;
	height: auto;
	padding: 20px 10px;
}
.navbar .navbar-brand > strong {
	font-weight: 900;
}
.navbar-nav {
	left: 0;
	margin: 0;
	position: absolute;
	right: 0;
	top: 0;
	width: 100%;
}
.navbar-nav > li > a {
	color: #fff;
	float: right;
	padding-bottom: 10px;
	padding-top: 10px;
	text-align: right;
}
.nav > li > a:hover, .nav > li > a:focus {
	background-color: #2c3e50;
}
.nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
	background-color: #2c3e50;
	border: none;
}
.navbar-nav > li > .dropdown-menu {
	width: 100%;
}
.navbar-nav .open .dropdown-menu {
	background-color: #fff;
	border-radius: 0;
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.17);
		-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.17);
	position: absolute;
	top: 60px;
	width: 100%;
}
.dropdown-menu > li > a {
	font-size: 12px;
	font-size: 1.2rem;
	padding: 10px 20px;
}
.dropdown-menu > li > a:hover {
	background-color: #e98b39;
	color: #fff;
}

/* Content */
.page-header {
	border-bottom: none;
	margin: 0;
	padding: 10px 0;
	text-align: center;
}
.page-subheader {
	color: #95a5a6;
	font-size: 14px;
	font-size: 1.4rem;;
	font-weight: 300;
}
.box-white {
	background-color: #fff;
	border-radius: 5px;
	box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
		-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
}
.box-white + .button-block {
	padding: 10px 0;
	text-align: center;
}
.box-white + .button-block .btn {
	display: block;
	padding: 10px 0;
	width: 100%;
}
.block-title {
	margin-bottom: 5px;
	position: relative;
}
.block-title .btn-toggle {
	border-radius: 0 5px 5px 0;
	position: absolute;
	right: 0;
	top: 0;
}
.block-title h2 {
	background-color: #34495e;
	border-radius: 5px;
	color: #fff;
	font-size: 12px;
	font-size: 1.2rem;
	font-weight: 700;
	padding: 10px 12px;
	text-transform: uppercase;
}
.input-block, .input-block-left, .input-block-right {
	padding: 10px 25px 0;
}
.form-control.data1 {
	background-color: transparent;
	border: none;
	color: #34495e;
	font-size: 14px;
	font-size: 1.4rem;
}
.form-control.data2 {
	background-color: transparent;
	border: none;
	color: #95a5a6;
	font-size: 12px;
	font-size: 1.2rem;
	height: auto;
	padding: 0 12px;
}
.form-control.data1[disabled], .form-control.data2[disabled] {
	cursor: text;
}
.toothchart-wrapper {
	overflow-x: scroll;
}
#toothchart {
	background-color: #fff;
	margin: 0 auto;
	overflow: hidden;
	padding: 10px 0 0;
	width: 450px;
}
#toothchart ul {
	float: left;
	list-style: none;
	margin: 0;
	padding: 0;
	text-align: center;
	width: 50%;
}
#toothchart ul > li.tooth-button {
	float: left;
}
#toothchart .upper-chart ul, #toothchart .lower-chart ul {
	padding: 10px 0;
}
#toothchart .upper-chart ul {
	border-bottom: 1px solid #eee;
}
#toothchart .upper-chart ul:last-child {
	border-left: 1px solid #eee;
}
#toothchart .lower-chart ul, #toothchart .lower-chart ul > li.tooth-button {
	float: right;
}
#toothchart .lower-chart ul:first-child {
	border-left: 1px solid #eee;
}
.tooth-button {
	height: 25px;
	position: relative;
	width: 25px;
}
.upper-chart .tooth-button {
	margin-left: 2px;
}
.lower-chart .tooth-button {
	margin-right: 2px;
}
/* ... */

